--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
@@ -66,12 +67,25 @@
                     android:text="프로필 사진"
                     android:textSize="15sp"/>
 
+            <FrameLayout
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/profile_profile_img_background"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="@mipmap/ic_launcher" />
+
                 <ImageView
                     android:id="@+id/profile_profile_img"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_gravity="center"
-                    android:src="@mipmap/ic_launcher_round" />
+                    android:visibility="invisible"/>
+
+            </FrameLayout>
+
 
             <LinearLayout
                 android:id="@+id/upload_profile_image_layout"
@@ -126,6 +140,34 @@
                 android:layout_marginTop="5dp"
                 android:textSize="13sp"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="50dp">
+
+                <Button
+                    android:id="@+id/edit_profile_cancel_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edit_profile_btn"
+                    android:text="취소"
+                    android:layout_margin="5dp"
+                    android:textColor="#ffffff"
+                    android:layout_weight="1"
+                    android:stateListAnimator="@null" />
+
+                <Button
+                    android:id="@+id/edit_profile_ok_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edit_profile_ok_btn"
+                    android:text="확인"
+                    android:layout_margin="5dp"
+                    android:textColor="#ffffff"
+                    android:layout_weight="1"
+                    android:stateListAnimator="@null"/>
+            </LinearLayout>
 
         </LinearLayout>
 
